Update ember-cli-facebook-js-sdk to the latest version

--- a/app/templates/fb-login.hbs
+++ b/app/templates/fb-login.hbs
@@ -1,3 +1,7 @@
-<div class="fb-login-button" data-max-rows="1" data-size="xlarge" data-show-faces="false"
-  data-auto-logout-link="false" onlogin="checkLoginState();" scope="public_profile,email,user_tagged_places">
+<div class="row">
+  <div class="col-sm-6 col-sm-offset-3">
+    <div class="fb-login-button" data-max-rows="1" data-size="xlarge" data-show-faces="false"
+        data-auto-logout-link="false" onlogin="checkLoginState();" scope="public_profile,email,user_tagged_places">
+    </div>
+  </div>
 </div>
