--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -1,3 +1,9 @@
-<h2 id="title">Welcome to Ember.js</h2>
+<div class="container">
+  <div class="row">
+    <div class="col-sm-6 col-sm-offset-3">
+      <h2 id="title">I have been to...</h2>
+    </div>
+  </div>
 
 {{outlet}}
+</div>
